p3nfs (5.19-1) UNRELEASED; urgency=low

  * New upstream release, has files moved into new directories.

  * Standard version bumped to 3.7.2

 -- Geert Stappers <stappers@debian.org>  Mon, 24 Jul 2006 11:30:34 +0200

p3nfs (5.18-2) unstable; urgency=low

  * New maintainer (Closes: #95747,312838)

  * Added "Psion/Symbian" in the short description
  
  * debian/control: switch to dh_installman, removed dh_ comment lines

 -- Geert Stappers <stappers@debian.org>  Thu, 21 Jul 2005 11:03:27 +0200

p3nfs (5.18-1) unstable; urgency=low

  * Orphaning this package: maintainer set to Debian QA Group. See
    #95747 and #312838.
  * New upstream release.
  * Updated description in debian/control.
  * Added copyright holders to debian/copyright.
  * Fixed "p3nfs needs dependency to portmap", closes: #298278.
  * Fixed "override disparities found in suite unstable, override says
    otherosfs - extra, .deb says misc - optional".

 -- Anibal Monsalve Salazar <anibal@debian.org>  Mon, 13 Jun 2005 08:53:49 +1000

p3nfs (5.15-2) unstable; urgency=low

  * Looks like the serial port on s390 is /dev/ttyS, not /dev/ttyS0
  * Save changelog in utf-8

 -- Steve Haslam <araqnid@debian.org>  Wed, 31 Mar 2004 15:47:38 +0100

p3nfs (5.15-1) unstable; urgency=low

  * New upstream release (closes: #181691). I no longer have a Psion, so I
    have no idea if that actually *works*. This package is RFA'd for a
    reason.
  * Update debian/copyright to include correct upstream location (Closes: #203204)
  * Fix "Debian/GNU Linux" (urgh) (Closes: #126978)
  * Copy updated description from upstream webpage (Closes: #125211)

 -- Steve Haslam <araqnid@debian.org>  Fri, 12 Mar 2004 23:38:25 +0000

p3nfs (5.4-7) unstable; urgency=low

  * Rebuild due to bogus shared library versioning. (closes: #97848)

 -- Steve Haslam <araqnid@debian.org>  Fri, 18 May 2001 19:53:49 +0100

p3nfs (5.4-6) unstable; urgency=low

  * Changing tactic: copy the nfs_mount.h from kernel 2.0.39 and use that