@@ -39,7 +39,8 @@ Copyright 1992-1994 Rudolf Koenig.
 
   You should have received a copy of the GNU General Public License
   along with this program; if not, write to the Free Software Foundation,
-  Inc., 59 Temple Place Suite 330, Boston, MA 02111-1307 USA.
+  Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA.
+
 
 On Debian GNU/Linux systems, the complete text of the GNU General
 Public License can be found in `/usr/share/common-licenses/GPL'.
