@@ -1,0 +1,4 @@
+usr/bin
+usr/share/doc/p3nfs
+usr/share/lintian/overrides
+usr/share/p3nfs
