@@ -1,0 +1,2 @@
+p3nfs: package-contains-upstream-install-documentation usr/share/doc/p3nfs/INSTALL.epoc16.gz
+p3nfs: package-contains-upstream-install-documentation usr/share/doc/p3nfs/INSTALL.symbian.gz
