@@ -4,6 +4,8 @@ p3nfs (5.19-1) UNRELEASED; urgency=low
 
   * Standard version bumped to 3.7.2
 
+  * Linda & Lintian Clean.
+
  -- Geert Stappers <stappers@debian.org>  Mon, 24 Jul 2006 11:30:34 +0200
 
 p3nfs (5.18-2) unstable; urgency=low
